[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/EnemySmall.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Emitter.tscn" type="PackedScene" id=3]
[ext_resource path="res://sfx/Explosion/Explosion2__006.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 16, 8 )

[sub_resource type="Animation" id=7]
resource_name = "Move"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( -2, 1, -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 233, -15 ), Vector2( 0, 110 ), Vector2( 233, -15 ), Vector2( 460, 110 ), Vector2( 233, -15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -70.0, 0.0, 70.0, 0.0 ]
}

[node name="Enemy" type="Node2D"]
script = ExtResource( 2 )
points = 10

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 233, -15 )
frames = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="AnimatedSprite"]
collision_layer = 240
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/Area2D"]
shape = SubResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="Emitter" parent="AnimatedSprite" instance=ExtResource( 3 )]
pool_name = "enemy_bullet"
enabled = false
direction = Vector2( 0, 1 )
speed = 100

[node name="DieSfx" type="AudioStreamPlayer2D" parent="AnimatedSprite"]
stream = ExtResource( 4 )

[node name="DieVfx" type="CPUParticles2D" parent="AnimatedSprite"]
emitting = false
amount = 100
lifetime = 0.3
one_shot = true
explosiveness = 0.8
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0

[node name="Timer" type="Timer" parent="AnimatedSprite"]
wait_time = 0.3
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/Move = SubResource( 7 )

[connection signal="timeout" from="AnimatedSprite/Timer" to="." method="_on_Timer_timeout"]
